# simdcopy

./: CMakeLists.txt  README.md  simdcopy.h  simdcopy.hpp
.github/workflows/: pipeline.yml
tests/: CMakeLists.txt  benchmark.cpp  unit.cpp
